--- a/Landing-page.html
+++ b/Landing-page.html
@@ -110,7 +110,7 @@
         </div>
 
         <div class="flex flex-col ml-[48px] gap-4 ml-[40px]">
-            <div class="flex space-x-[40px]">
+            <div class="flex space-x-[20px]">
 
                 <div class="card bg-white flex flex-col max-w-[360px] p-[22px] rounded-md">
                     <div class="flex flex-row">
@@ -119,16 +119,17 @@
                     </div>
                     <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Kirim barang sangat cepat, kirim hari ini sampai hari ini juga !</span>
                     <span class="text-[#5F5F5F] text-[16px] font-[500]">Mulai dari</span>
-                    <span class="text-[#3375B8] text-[40px] font-[700]">Rp. 10.000</span>
+                    <span class="text-[#3375B8] text-[35px] font-[700]">Rp. 10.000</span>
                 </div>
-                <div class="card bg-white flex flex-col max-w-[370px] p-[22px] rounded-md">
+                
+                <div class="card bg-white flex flex-col max-w-[360px] p-[22px] rounded-md">
                     <div class="flex flex-row">
                         <img src="./assets/i-nextday.png" alt="icon-nextday-kuy" class="w-[50px] h-[50px] mr-4">
                         <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Nextday</span>
                     </div>
                     <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Kirim barang hari ini sampai <br> esok hari</span>
                     <span class="text-[#5F5F5F] text-[16px] font-[500]">Mulai dari</span>
-                    <span class="text-[#3375B8] text-[40px] font-[700]">Rp. 8.000 <a class="text-[24px] text-[#B83333]">/</a> <a class="text-[24px] text-[#B83333] line-through">10.000 </a></span>
+                    <span class="text-[#3375B8] text-[35px] font-[700]">Rp. 8.000 <a class="text-[24px] text-[#B83333]">/</a> <a class="text-[24px] text-[#B83333] line-through">10.000 </a></span>
                 </div>
                 
             </div>
@@ -172,7 +173,7 @@
             <img src="./assets/i-arrow.png" alt="arrow-kuy" class="w-[30px]">
         </div>
 
-        <div class="flex gap-[20px] justify-center">
+        <div class="flex flex-wrap gap-[20px] justify-center">
             <div class="bg-white max-w-[360px] rounded-md relative">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
@@ -212,7 +213,7 @@
     </div>
 
     <!-- berita dan promo -->
-    <div class="flex justify-around mb-[30px]">
+    <div class="flex flex-wrap justify-around mb-[30px]">
         <div class="flex flex-col ml-[10px] w-[850px]">
             <span class="text-[#0065C1] text-[40px] font-[600] justify-start">Berita & Promo</span>
             <p class="text-[#5F5F5F] text-[18px] font-[400]">Nantikan update terbaru dari kami</p>
@@ -221,7 +222,7 @@
         <p class=" flex items-end text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p>
     </div>
 
-    <div class="flex justify-center gap-[48px] mb-[150px] ">
+    <div class="flex flex-wrap justify-center gap-[48px] mb-[10 0px] ">
         <div class="">
             <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[359.395px] w-[530px]">
             <p class="text-[#5F5F5F] text-[16px] py-[10px]">12 Desember 2023</p>
@@ -260,7 +261,7 @@
     </div>
 
     <!-- tiket bus and travel -->
-    <div class="flex gap-[10px] mb-[100px] justify-center">
+    <div class="flex flex-wrap gap-[10px] mb-[100px] justify-center">
         <div class="flex flex-col">
             <p class="text-[#0065C1] text-[40px] font-[600]">Cari Tiket Bus & Travel?</p>
             <p class="max-w-[563px] text-[#5F5F5F] font-[400] text-[18px] mb-[26px]">Ada banyak pilihan shuttle/travel terbaik dengan rute terlengkap untuk teman perjalanan kamu</p>
