--- a/Landing-page.html
+++ b/Landing-page.html
@@ -222,7 +222,7 @@
         <p class=" flex items-end text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p>
     </div>
 
-    <div class="flex flex-wrap justify-center gap-[48px] mb-[10 0px] ">
+    <div class="flex flex-wrap justify-center gap-[48px] mb-[100px] ">
         <div class="">
             <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[359.395px] w-[530px]">
             <p class="text-[#5F5F5F] text-[16px] py-[10px]">12 Desember 2023</p>
