--- a/Landing-page.html
+++ b/Landing-page.html
@@ -127,7 +127,7 @@
                         <img src="./assets/i-nextday.png" alt="icon-nextday-kuy" class="w-[50px] h-[50px] mr-4">
                         <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Nextday</span>
                     </div>
-                    <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Kirim barang hari ini sampai <br> esok hari</span>
+                    <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Kirim barang hari ini sampai esok hari</span>
                     <span class="text-[#5F5F5F] text-[16px] font-[500]">Mulai dari</span>
                     <span class="text-[#3375B8] text-[35px] font-[700]">Rp. 8.000 <a class="text-[24px] text-[#B83333]">/</a> <a class="text-[24px] text-[#B83333] line-through">10.000 </a></span>
                 </div>
@@ -274,14 +274,14 @@
     </div>
 
     <!-- footer -->
-    <div class="bg-[#E2F7FC] flex justify-evenly pt-[65px] gap-[60px] pb-[50px]">
-        <div class="flex flex-col">
+    <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] gap-[60px] pb-[50px]">
+        <div class="flex flex-wrap flex-col">
             <img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]">
             <p class="text-black text-[18px] font-[600] mt-[20px]">Download aplikasinya di</p>
             <img src="./assets/googleplaystore.png" alt="icon-google-lay-kuy" class="w-[229px] mt-2">
         </div>
         
-        <div class="flex flex-col gap-[10px]">
+        <div class="flex flex-col flex-wrap gap-[10px]">
             <p class="text-black text-[18px] font-[600] pb-[10px]">Lainnya</p>
             <a href="" class="text-[#5F5F5F]">Syarat dan Ketentuan</a>
             <a href="" class="text-[#5F5F5F]">Pusat Bantuan</a>
