add: cakupan-wilayah page

--- a/Landing-page.html
+++ b/Landing-page.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="Landing-page.css">
 </head>
 <body>
-<div class="bg-[#FEFEFE]">
+<div class="bg-[#F7F7F8]">
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
