cakupan wilayah page

--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -8,7 +8,7 @@
     <title>Cakupan Wilayah</title>
 </head>
 <body>
-<div class="#F7F7F8">
+<div class="bg-[#F7F7F8] container">
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
@@ -32,8 +32,8 @@
         </div>
     </div>
 
-    <div class="bg-white rounded-md flex">
-        <div class="flex flex-col px-[10px] py-[20px]">
+    <div class="bg-white rounded-md flex justify-evenly mt-[50px] mb-[100px] card w-[1100px] py-[20px] lg:ml-[70px]">
+        <div class="flex flex-col">
             <p class="text-[#2D71B4] text-[30px] font-[600] mb-[20px]">Cakupan Wilayah</p>
             <input type="text" name="search" id="search" placeholder="Cari alamat disini" class="border-[#E0E0E0] border w-[265px] rounded-md p-[10px]">
             <span class="text-[#818181] text-[12px] font-[500] mb-[10px] pt-2">Sering Dicari :</span>
@@ -56,14 +56,14 @@
         </div>
 
         <div class="">
-            <img src="" alt="">
+            <img src="./assets/cakupan-wilayah/maps.png" alt="maps" class="rounded-md w-[711px] h-[400px]">
         </div>
     </div>
 
-    <div class="flex flex-col w-[1200px] justify-center">
+    <div class="flex flex-col w-[1100px] justify-center pb-[200px] lg:ml-[70px]">
         <div class="">
             <p class="text-[#2D71B4] text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
-            <p class="text-[#5F5F5F] text-[18px] font-[400]">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400]">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
         </div>
 
         <div class="flex flex-row mt-[30px] mb-[50px]">
@@ -72,27 +72,16 @@
                 <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
             </div>
 
-            <div class="tabel">
-                <table class="table-fixed">
-                    <thead>
-                        <tr>
-                            <th>Kabupaten/Kota</th>
-                            <th>Kecamatan</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Bandung</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="tabel w-[100%]">
+                
             </div>
         </div>
 
         <div class="">
-            <p class="text-[#5F5F5F] text-[18px] font-[400]">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
+            <p class="text-[#5F5F5F] text-[16px] font-[400]">Nah, selain daerah-daerah yang disebutkan di atas, kamu juga bisa cek keterjangkauan pengiriman Tiketux Kuy di halaman ini, scroll ke bawah sampai menu 'Cakupan Wilayan Pengiriman'. Saatnya kirim barang dan makanan lebih hemat pakai Tiketux Kuy! Ongkir FLAT sampai dengan 3kg se Bandung Raya.</p>
         </div>
     </div>
+
 </div>
 </body>
 </html>
