--- a/Landing-page.html
+++ b/Landing-page.html
@@ -174,7 +174,7 @@
         </div>
 
         <div class="flex flex-wrap gap-[20px] justify-center">
-            <div class="bg-white max-w-[360px] rounded-md relative">
+            <div class="bg-white max-w-[360px] rounded-xl relative">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
@@ -186,7 +186,7 @@
                 </div>
             </div>
 
-            <div class="bg-white max-w-[360px] rounded-md relative">
+            <div class="bg-white max-w-[360px] rounded-xl relative">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
@@ -198,7 +198,7 @@
                 </div>
             </div>
 
-            <div class="bg-white max-w-[360px] rounded-md relative">
+            <div class="bg-white max-w-[360px] rounded-xl relative">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
