add: cakupan wilayah fitur

--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -66,14 +66,59 @@
             <p class="text-[#5F5F5F] text-[16px] font-[400]">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
         </div>
 
-        <div class="flex flex-row mt-[30px] mb-[50px]">
+        <div class="flex flex-row mt-[30px] mb-[50px] gap-[65px]">
             <div class="flex flex-col w-[347px]">
                 <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] mt-[29px]">Reservasi Sekarang</button>
                 <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
             </div>
 
             <div class="tabel w-[100%]">
-                
+                <table class="border-collapse border border-[#C2C2C2] p-2 p-2 w-[804px]">
+                    <thead class="w-[402px]">
+                        <tr>
+                            <th class="border border-[#C2C2C2] p-2 p-2">Kabupaten/Kota</th>
+                            <th class="border border-[#C2C2C2] p-2">Kecamatan</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td >Bandung</td>
+                            <td class="border border-[#C2C2C2] p-2">Baleendah</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="border border-[#C2C2C2] p-2">Bojongsoang</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="border border-[#C2C2C2] p-2">Cilengkrang</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="border border-[#C2C2C2] p-2">Cileunyi</td>
+                        </tr>
+                        <tr>
+                            <td>Kabupaten Bandung Barat</td>
+                            <td class="border border-[#C2C2C2] p-2">Batujajar</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="border border-[#C2C2C2] p-2">Cihampelas</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="border border-[#C2C2C2] p-2">Cisarua</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td class="border border-[#C2C2C2] p-2">Lembang</td>
+                        </tr>
+                        
+                    </tbody>
+                </table>
+                <span>Catatan</span>
+                <p class="text-[#5F5F5F]">* Menjangkau sebagian besar area</p>
+                <p class="text-[#5F5F5F]">** Menjangkau sebagian kecil area</p>
             </div>
         </div>
 
