add cek paket fitur

--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -13,9 +13,9 @@
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
             <img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]">
-            <a href="#">Beranda</a>
+            <a href="./Landing-page.html">Beranda</a>
             <a href="#">Cek Paket</a>
-            <a href="#">Cakupan Wilayah</a>
+            <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
         </div>
 
         <div class="right-content ml-2 flex space-x-[34px]">
@@ -80,43 +80,43 @@
                             <th class="border border-[#C2C2C2] p-2">Kecamatan</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="text-center">
                         <tr>
-                            <td >Bandung</td>
-                            <td class="border border-[#C2C2C2] p-2">Baleendah</td>
+                            <td>Bandung</td>
+                            <td class="border border-[#C2C2C2] p-2">Baleendah*</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td class="border border-[#C2C2C2] p-2">Bojongsoang</td>
+                            <td class="border border-[#C2C2C2] p-2">Bojongsoang*</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td class="border border-[#C2C2C2] p-2">Cilengkrang</td>
+                            <td class="border border-[#C2C2C2] p-2">Cilengkrang*</td>
+                        </tr>
+                        <tr>
+                            <td class=""></td>
+                            <td class="border border-[#C2C2C2] p-2">Cileunyi*</td>
+                        </tr>
+                        <tr>
+                            <td class="border-t-2 border-[#C2C2C2] ">Kabupaten Bandung Barat</td>
+                            <td class="border border-[#C2C2C2] p-2">Batujajar*</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td class="border border-[#C2C2C2] p-2">Cileunyi</td>
-                        </tr>
-                        <tr>
-                            <td>Kabupaten Bandung Barat</td>
-                            <td class="border border-[#C2C2C2] p-2">Batujajar</td>
+                            <td class="border border-[#C2C2C2] p-2">Cihampelas**</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td class="border border-[#C2C2C2] p-2">Cihampelas</td>
+                            <td class="border border-[#C2C2C2] p-2">Cisarua*</td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td class="border border-[#C2C2C2] p-2">Cisarua</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td class="border border-[#C2C2C2] p-2">Lembang</td>
+                            <td class="border border-[#C2C2C2]">Lembang*</td>
                         </tr>
                         
                     </tbody>
                 </table>
-                <span>Catatan</span>
+                <p class="mt-2">Catatan</p>
                 <p class="text-[#5F5F5F]">* Menjangkau sebagian besar area</p>
                 <p class="text-[#5F5F5F]">** Menjangkau sebagian kecil area</p>
             </div>
