--- a/Landing-page.html
+++ b/Landing-page.html
@@ -12,9 +12,9 @@
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
             <img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]">
-            <a href="#">Beranda</a>
+            <a href="./Landing-page.html">Beranda</a>
             <a href="#">Cek Paket</a>
-            <a href="#">Cakupan Wilayah</a>
+            <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
         </div>
 
         <div class="right-content ml-2 flex space-x-[34px]">
