--- a/Landing-page.html
+++ b/Landing-page.html
@@ -134,7 +134,7 @@
                 
             </div>
 
-            <div class="card bg-white flex flex-col max-w-[370px] p-[22px] rounded-md">
+            <div class="card bg-white flex flex-col max-w-[360px] p-[22px] rounded-md">
                 <div class="flex flex-row">
                     <img src="./assets/i-medicine.png" alt="icon-medicine-kuy" class="w-[50px] h-[50px] mr-4">
                     <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Medicine</span>
@@ -219,7 +219,7 @@
             <p class="text-[#5F5F5F] text-[18px] font-[400]">Nantikan update terbaru dari kami</p>
         </div>
 
-        <p class=" flex items-end text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p>
+       <a href=""><p class=" flex items-end text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p></a>
     </div>
 
     <div class="flex flex-wrap justify-center gap-[48px] mb-[100px] ">
