--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="bg-white rounded-md flex justify-evenly mt-[50px] mb-[100px] card w-[1100px] py-[20px] lg:ml-[70px]">
-        <div class="flex flex-col">
+        <div class="flex flex-col sm:flex-wrap">
             <p class="text-[#2D71B4] text-[30px] font-[600] mb-[20px]">Cakupan Wilayah</p>
             <input type="text" name="search" id="search" placeholder="Cari alamat disini" class="border-[#E0E0E0] border w-[265px] rounded-md p-[10px]">
             <span class="text-[#818181] text-[12px] font-[500] mb-[10px] pt-2">Sering Dicari :</span>
