--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="Cek-paket.css">
-    <title>Document</title>
+    <title>Cek Paket</title>
 </head>
 <body>
     <div class="bg-[#F7F7F8]">
@@ -43,7 +43,7 @@
             <p class="text-[#5F5F5F] text-[12px] font-[500] mt-2">*Kamu dapat memasukkan kode resi hinga 20 kode</p>
         </div>
 
-        <div class="flex gap-[48px]">
+        <div class="flex gap-[48px] mb-[100px]">
             <div class="flex flex-col bg-white ml-[60px] p-[20px] mt-[48px] rounded-md">
                 <div class="flex bg-white w-[490px]">
                     <div class="flex flex-col">
@@ -76,38 +76,47 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col">
-                    <div class="flex">
+                <div class="flex flex-col gap-[30px]">
+                    <div class="flex gap-[30px]">
                         <div class="flex flex-col">
                             <p class="text-[#F96441] text-[16px] font-[600]">13 Juni 2023</p>
                             <p class="text-[#5F5F5F] text-[14px]">Senin, 12:30</p>
                         </div>
 
-                        <ul
-                            class="relative list-none overflow-hidden p-0"
-                            data-te-stepper-init
-                            data-te-stepper-type="vertical">
-                            <li
-                                data-te-stepper-step-ref
-                                class="relative h-fit after:absolute after:left-[2.45rem] after:top-[3.3rem] after:mt-px after:h-[calc(100%-2.45rem)] after:w-px after:bg-[#e0e0e0] after:content-[''] dark:after:bg-neutral-600">
-                                <div
-                                    data-te-stepper-head-ref
-                                    class="flex cursor-pointer items-center p-6 leading-[1.3rem] no-underline ">
-                                <span
-                                    data-te-stepper-head-icon-ref
-                                    class="mr-3 flex h-[1.938rem] w-[1.938rem] items-center justify-center rounded-full bg-[#2D71B4] text-sm font-medium text-[#40464f]">
-                                </span>
-                                <span
-                                    data-te-stepper-head-text-ref
-                                    class="text-neutral-500 after:absolute after:flex after:text-[0.8rem] after:content-[data-content] dark:text-neutral-300">
-                                </span>
-                                </div>
-                                <div
-                                    data-te-stepper-content-ref
-                                    class="transition-[height, margin-bottom, padding-top, padding-bottom] left-0 overflow-hidden pb-6 pl-[3.75rem] pr-6 duration-300 ease-in-out">
-                                </div>
-                            </li>
-                         </ul>
+                        <div class="stepper relative">
+                            <div class="bg-[#2D71B4] w-[20px] h-[30px] rounded-full p-4"></div>
+                            <div class="line absolute bg-"></div>
+                        </div>
+
+                        <div class="flex flex-col">
+                            <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-[30px]">
+                        <div class="flex flex-col">
+                            <p class="text-[#F96441] text-[16px] font-[600]">13 Juni 2023</p>
+                            <p class="text-[#5F5F5F] text-[14px]">Senin, 12:30</p>
+                        </div>
+
+                        <div class="stepper relative">
+                            <div class="bg-[#D9D9D9] w-[20px] h-[30px] rounded-full p-4"></div>
+                            <div class="line absolute bg-"></div>
+                        </div>
+
+                        <div class="flex flex-col">
+                            <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-[30px]">
+                        <div class="flex flex-col">
+                            <p class="text-[#F96441] text-[16px] font-[600]">13 Juni 2023</p>
+                            <p class="text-[#5F5F5F] text-[14px]">Senin, 12:30</p>
+                        </div>
+
+                        <div class="stepper relative">
+                            <div class="bg-[] w-[20px] h-[30px] rounded-full p-4"></div>
+                            <div class="line absolute bg-"></div>
+                        </div>
 
                         <div class="flex flex-col">
                             <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
@@ -150,6 +159,49 @@
                 </div>
             </div>
         </div>
+
+        
+         <!-- footer -->
+    <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] gap-[60px] pb-[50px]">
+        <div class="flex flex-wrap flex-col">
+            <img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]">
+            <p class="text-black text-[18px] font-[600] mt-[20px]">Download aplikasinya di</p>
+            <img src="./assets/googleplaystore.png" alt="icon-google-lay-kuy" class="w-[229px] mt-2">
+        </div>
+        
+        <div class="flex flex-col flex-wrap gap-[10px]">
+            <p class="text-black text-[18px] font-[600] pb-[10px]">Lainnya</p>
+            <a href="" class="text-[#5F5F5F]">Syarat dan Ketentuan</a>
+            <a href="" class="text-[#5F5F5F]">Pusat Bantuan</a>
+            <a href="" class="text-[#5F5F5F]">FAQ</a>
+        </div>
+
+        <div class="flex flex-col">
+            <p class="text-black text-[18px] font-[600] pb-[20px]">Informasi Kontak</p>
+            <div class="flex">
+                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[23.894px] mr-[10px]">
+                <span class="text-[#5F5F5F]">0818-0400-4058</span>
+            </div>
+        </div>
+
+        <div class="flex flex-col">
+            <p class="text-black text-[18px] font-[600] pb-[20px]">Sosial Media</p>
+            <div class="flex gap-[4px]">
+                <a href="">
+                    <img src="./assets/i-instagram.png" alt="icon-instagram-kuy" class="w-[27px]">
+                </a>
+                <a href="">
+                    <img src="./assets/i-facebook.png" alt="icon-facebook-kuy" class="w-[27px]">
+                </a>
+                <a href="">
+                    <img src="./assets/i-twitter.png" alt="icon-twitter-kuy" class="w-[27px]">
+                </a>
+                <a href="">
+                    <img src="./assets/i-youtube.png" alt="icon-youtube-kuy" class="w-[27px]">
+                </a>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
 </html>
