--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -14,7 +14,7 @@
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
             <img src="./assets/nav-logo.jpeg" alt="logo-kuy" class="w-[162px]">
             <a href="./Landing-page.html">Beranda</a>
-            <a href="#">Cek Paket</a>
+            <a href="./Cek-paket.html">Cek Paket</a>
             <a href="./Cakupan-wilayah.html">Cakupan Wilayah</a>
         </div>
 
