--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -26,7 +26,7 @@
                 </a>
             </div>
 
-            <a href="#" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+            <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                 Login
             </a>
         </div>
@@ -66,8 +66,8 @@
             <p class="text-[#5F5F5F] text-[16px] font-[400]">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
         </div>
 
-        <div class="flex flex-row mt-[30px] mb-[50px] gap-[65px]">
-            <div class="flex flex-col w-[347px]">
+        <div class="flex flex-row mt-[30px] mb-[50px]">
+            <div class="flex flex-col w-[347px] mr-[65px]">
                 <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] mt-[29px]">Reservasi Sekarang</button>
                 <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
             </div>
