--- a/Landing-page.html
+++ b/Landing-page.html
@@ -25,7 +25,7 @@
                 </a>
             </div>
 
-            <a href="#" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
+            <a href="./Login.html" class="rounded-md text-[#2D71B4] border border-[#2D71B4] items-center py-[6px] px-[16px]">
                 Login
             </a>
         </div>
@@ -35,8 +35,8 @@
     <div class="hero flex flex-col justify-center items-center">
         <img src="./assets/hero.jpeg" alt="hero-image-kuy" class="relative">
         <!-- lacak paket -->
-        <div class="flex gap-4 absolute lacak">
-            <div class="bg-white rounded-md w-[373px] mb-[15px] h-[341px]">
+        <div class="flex absolute lacak">
+            <div class="bg-white rounded-md w-[373px] mb-[15px] h-[341px] mr-[20px]">
                 <div class="p-[20px]">
                     <span class="text-[#2D71B4] font-[600] text-[24px]">Lacak Paket Kuy</span>
                     <div class="flex flex-col ">
@@ -109,8 +109,8 @@
             <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
         </div>
 
-        <div class="flex flex-col ml-[48px] gap-4 ml-[40px]">
-            <div class="flex space-x-[20px]">
+        <div class="flex flex-col ml-[48px] ml-[40px]">
+            <div class="flex space-x-[20px] mb-[20px]">
 
                 <div class="card bg-white flex flex-col max-w-[360px] p-[22px] rounded-md">
                     <div class="flex flex-row">
@@ -140,9 +140,9 @@
                     <span class="text-[#4E4E4E] text-[30px] font-[600] mb-[12px]">Medicine</span>
                 </div>
                 <span class="text-[#5F5F5F] text-[16px] font-[400] mb-[12px]">Antar obat dari rumah sakit ke tempat kamu</span>
-                <div class="flex flex-row items-center gap-2">
-                    <span class="text-[#0065C1] text-[20px] font-[600]">Lebih Lanjut</span>
-                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[30px] h-[30px]">
+                <div class="flex flex-row items-center">
+                    <span class="text-[#0065C1] text-[20px] font-[600] mr-2">Lebih Lanjut</span>
+                    <img src="./assets/i-arrow.png" alt="icon-arrow-kuy" class="w-[1.87rem] h-[1.87rem]">
                 </div>
             </div>
         </div>
@@ -157,8 +157,8 @@
             <span class="text-[18px] text-[#5F5F5F] font-[400] text-center mb-[30px]">Mau produk kamu ditampilkan disini? atau dapat kan benefit lebih dengan join bersama kami</span>
             <div class="flex">
                 <button class="bg-[#2D71B4] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px] mr-[8px]">Tampilkan Produk Kamu</button>
-                <div class="flex bg-[#1CAD4E] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px] gap-2">
-                    <a href="#">Join Mitra</a>
+                <div class="flex bg-[#1CAD4E] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px]">
+                    <a href="#" class="mr-2">Join Mitra</a>
                     <img src="./assets/i-join-mitra.png" alt="icon-joint-mitra-kuy" class="w-[26.5px] h-[26.5px]">
                 </div>
             </div>
@@ -168,13 +168,13 @@
     </div>
 
     <div class="mb-[100px]">
-        <div class="flex gap-3 items-center justify-center my-[20px]">
-            <a href="" class="text-[#0065C1] text-[20px] font-[600]">Kunjungi Etalase Kuy</a>
+        <div class="flex items-center justify-center my-[20px]">
+            <a href="" class="text-[#0065C1] text-[20px] font-[600] mr-3">Kunjungi Etalase Kuy</a>
             <img src="./assets/i-arrow.png" alt="arrow-kuy" class="w-[30px]">
         </div>
 
-        <div class="flex flex-wrap gap-[20px] justify-center">
-            <div class="bg-white max-w-[360px] rounded-xl relative">
+        <div class="flex flex-wrap justify-center">
+            <div class="bg-white max-w-[360px] rounded-xl relative mr-[1.25rem]">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
@@ -186,7 +186,7 @@
                 </div>
             </div>
 
-            <div class="bg-white max-w-[360px] rounded-xl relative">
+            <div class="bg-white max-w-[360px] rounded-xl relative mr-[1.25rem]">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[360px] mb-[10px]">
                 <div class="px-[10px]">
                     <span class="text-[#4E4E4E] text-[20px] font-[700]">Cikutra Shop</span>
@@ -222,16 +222,16 @@
        <a href=""><p class=" flex items-end text-[#0065C1] text-[20px] font-[600]">Lihat Semua</p></a>
     </div>
 
-    <div class="flex flex-wrap justify-center gap-[48px] mb-[100px] ">
-        <div class="">
-            <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[359.395px] w-[530px]">
+    <div class="flex flex-wrap justify-center mb-[100px] ">
+        <div class="mr-[48px]">
+            <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="h-[22.462rem] w-[33.12rem]">
             <p class="text-[#5F5F5F] text-[16px] py-[10px]">12 Desember 2023</p>
             <p class="text-[#4E4E4E] text-[30px] font-[600] mb-[17.2px]">CikutraOlshop</p>
             <p class="text-[#5F5F5F] font-[400] text-[18px] max-w-[530px]">Macam macam kaos polos dewasa , bikin style kmau makin kece beuuddd</p>
         </div>
 
-        <div class="flex flex-col gap-[32px]">
-            <div class="flex">
+        <div class="flex flex-col">
+            <div class="flex mb-[32px]">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[283px] max-h-[162px]">
                 <div class="flex flex-col ml-[16px]">
                     <p class="text-[#5F5F5F] text-[16px]">12 Desember 2023</p>
@@ -240,7 +240,7 @@
                 </div>
             </div>
 
-            <div class="flex">
+            <div class="flex mb-[32px]">
                 <img src="./assets/etalase.jpeg" alt="etalase-kuy" class="max-w-[283px] max-h-[162px]">
                 <div class="flex flex-col ml-[16px]">
                     <p class="text-[#5F5F5F] text-[16px]">12 Desember 2023</p>
@@ -261,8 +261,8 @@
     </div>
 
     <!-- tiket bus and travel -->
-    <div class="flex flex-wrap gap-[10px] mb-[100px] justify-center">
-        <div class="flex flex-col">
+    <div class="flex flex-wrap mb-[100px] justify-center">
+        <div class="flex flex-col mr-[10px]">
             <p class="text-[#0065C1] text-[40px] font-[600]">Cari Tiket Bus & Travel?</p>
             <p class="max-w-[563px] text-[#5F5F5F] font-[400] text-[18px] mb-[26px]">Ada banyak pilihan shuttle/travel terbaik dengan rute terlengkap untuk teman perjalanan kamu</p>
             <button class="bg-[#2D71B4] text-white rounded-md text-[18px] font-[600] px-[16px] py-[12px] mr-[8px] max-w-[207px]">Kunjungi Sekarang</button>
@@ -274,18 +274,18 @@
     </div>
 
     <!-- footer -->
-    <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] gap-[60px] pb-[50px]">
-        <div class="flex flex-wrap flex-col">
+    <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] pb-[50px]">
+        <div class="flex flex-wrap flex-col mr-[60px]">
             <img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]">
             <p class="text-black text-[18px] font-[600] mt-[20px]">Download aplikasinya di</p>
             <img src="./assets/googleplaystore.png" alt="icon-google-lay-kuy" class="w-[229px] mt-2">
         </div>
         
-        <div class="flex flex-col flex-wrap gap-[10px]">
-            <p class="text-black text-[18px] font-[600] pb-[10px]">Lainnya</p>
-            <a href="" class="text-[#5F5F5F]">Syarat dan Ketentuan</a>
-            <a href="" class="text-[#5F5F5F]">Pusat Bantuan</a>
-            <a href="" class="text-[#5F5F5F]">FAQ</a>
+        <div class="flex flex-col flex-wrap">
+            <p class="text-black text-[18px] font-[600] pb-[10px] mb-[10px]">Lainnya</p>
+            <a href="" class="text-[#5F5F5F] mb-[10px]">Syarat dan Ketentuan</a>
+            <a href="" class="text-[#5F5F5F] mb-[10px]">Pusat Bantuan</a>
+            <a href="" class="text-[#5F5F5F] ">FAQ</a>
         </div>
 
         <div class="flex flex-col">
@@ -298,15 +298,15 @@
 
         <div class="flex flex-col">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Sosial Media</p>
-            <div class="flex gap-[4px]">
+            <div class="flex">
                 <a href="">
-                    <img src="./assets/i-instagram.png" alt="icon-instagram-kuy" class="w-[27px]">
+                    <img src="./assets/i-instagram.png" alt="icon-instagram-kuy" class="w-[27px] mr-[4px]">
                 </a>
                 <a href="">
-                    <img src="./assets/i-facebook.png" alt="icon-facebook-kuy" class="w-[27px]">
+                    <img src="./assets/i-facebook.png" alt="icon-facebook-kuy" class="w-[27px] mr-[4px]">
                 </a>
                 <a href="">
-                    <img src="./assets/i-twitter.png" alt="icon-twitter-kuy" class="w-[27px]">
+                    <img src="./assets/i-twitter.png" alt="icon-twitter-kuy" class="w-[27px] mr-[4px]">
                 </a>
                 <a href="">
                     <img src="./assets/i-youtube.png" alt="icon-youtube-kuy" class="w-[27px]">
