--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -36,19 +36,19 @@
             <p class="text-[#2D71B4] text-[30px] font-[600]">Lacak Paket Kuy</p>
             <p class="text-[16px] font-[600] mb-2">Kode Resi :</p>
 
-            <div class="flex gap-[20px]">
-                <input type="text" name="search" id="search" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" class="w-[720px] rounded-md border border-[#606060]">
+            <div class="flex">
+                <input type="text" name="search" id="search" placeholder="Masukan Kode Resi, contoh: xxxxxxx , xxxxxxx , xxxxxxx" class="w-[720px] rounded-md border border-[#606060] mr-[20px]">
                 <button class="bg-[#2D71B4] text-white py-[12px] px-[118px] rounded-md text-[18px] font-[600]">Cek Paket</button>
             </div>
             <p class="text-[#5F5F5F] text-[12px] font-[500] mt-2">*Kamu dapat memasukkan kode resi hinga 20 kode</p>
         </div>
 
-        <div class="flex gap-[48px] mb-[100px]">
-            <div class="flex flex-col bg-white ml-[60px] p-[20px] mt-[48px] rounded-md">
+        <div class="flex mb-[100px]">
+            <div class="flex flex-col bg-white ml-[60px] p-[20px] mt-[48px] rounded-md mr-[48px]">
                 <div class="flex bg-white w-[490px]">
                     <div class="flex flex-col">
-                        <div class="flex gap-[30px] mb-[10px]">
-                            <div class="">
+                        <div class="flex mb-[10px]">
+                            <div class="mr-[30px]">
                                 <p class="text-[#5F5F5F] text-[16px] font-[500]">Pengirim</p>
                                 <p class="text-[#2D71B4] text-[20px] font-[600]">J26 NUSANTARA APPAREL</p>
                             </div>
@@ -59,8 +59,8 @@
                             </div>
                         </div>
 
-                        <div class="flex gap-[30px]">
-                            <div class="">
+                        <div class="flex">
+                            <div class="mr-[30px]">
                                 <p class="text-[#5F5F5F] text-[16px] font-[500]">Penerima</p>
                                 <p class="text-[#2D71B4] text-[20px] font-[600]">Syarif Hamzah</p>
                                 <p class="text-[#5F5F5F] text-[12px] font-[500] w-[257px]">PERUMAHAN MANGGA 100 RUMAH B JL.MANGGA NO.100 </p>
@@ -76,14 +76,14 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col gap-[30px]">
-                    <div class="flex gap-[30px]">
+                <div class="flex flex-col">
+                    <div class="flex mb-[30px]">
                         <div class="flex flex-col">
                             <p class="text-[#F96441] text-[16px] font-[600]">13 Juni 2023</p>
                             <p class="text-[#5F5F5F] text-[14px]">Senin, 12:30</p>
                         </div>
 
-                        <div class="stepper relative">
+                        <div class="stepper relative mx-[30px]">
                             <div class="bg-[#2D71B4] w-[20px] h-[30px] rounded-full p-4"></div>
                             <div class="line absolute bg-"></div>
                         </div>
@@ -92,14 +92,14 @@
                             <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
                         </div>
                     </div>
-                    <div class="flex gap-[30px]">
+                    <div class="flex mb-[30px]">
                         <div class="flex flex-col">
                             <p class="text-[#F96441] text-[16px] font-[600]">13 Juni 2023</p>
                             <p class="text-[#5F5F5F] text-[14px]">Senin, 12:30</p>
                         </div>
 
-                        <div class="stepper relative">
-                            <div class="bg-[#D9D9D9] w-[20px] h-[30px] rounded-full p-4"></div>
+                        <div class="stepper relative mx-[30px]">
+                            <div class="bg-[#2D71B4] w-[20px] h-[30px] rounded-full p-4"></div>
                             <div class="line absolute bg-"></div>
                         </div>
 
@@ -107,14 +107,14 @@
                             <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
                         </div>
                     </div>
-                    <div class="flex gap-[30px]">
+                    <div class="flex mb-[30px]">
                         <div class="flex flex-col">
                             <p class="text-[#F96441] text-[16px] font-[600]">13 Juni 2023</p>
                             <p class="text-[#5F5F5F] text-[14px]">Senin, 12:30</p>
                         </div>
 
-                        <div class="stepper relative">
-                            <div class="bg-[] w-[20px] h-[30px] rounded-full p-4"></div>
+                        <div class="stepper relative mx-[30px]">
+                            <div class="bg-[#2D71B4] w-[20px] h-[30px] rounded-full p-4"></div>
                             <div class="line absolute bg-"></div>
                         </div>
 
@@ -122,6 +122,8 @@
                             <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
                         </div>
                     </div>
+
+
                 </div>
             </div>
 
@@ -129,8 +131,8 @@
      
                 <div class="flex bg-white p-[20px]">
                     <div class="flex flex-col">
-                        <div class="flex gap-[30px] mb-[10px]">
-                            <div class="">
+                        <div class="flex mb-[10px]">
+                            <div class="mr-[30px]">
                                 <p class="text-[#5F5F5F] text-[16px] font-[500]">Pengirim</p>
                                 <p class="text-[#2D71B4] text-[20px] font-[600]">J26 NUSANTARA APPAREL</p>
                             </div>
@@ -141,8 +143,8 @@
                             </div>
                         </div>
 
-                        <div class="flex gap-[30px]">
-                            <div class="">
+                        <div class="flex">
+                            <div class="mr-[30px]">
                                 <p class="text-[#5F5F5F] text-[16px] font-[500]">Penerima</p>
                                 <p class="text-[#2D71B4] text-[20px] font-[600]">Syarif Hamzah</p>
                                 <p class="text-[#5F5F5F] text-[12px] font-[500] w-[257px]">PERUMAHAN MANGGA 100 RUMAH B JL.MANGGA NO.100 </p>
