--- a/Landing-page.html
+++ b/Landing-page.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="Landing-page.css">
 </head>
 <body>
-<div class="bg-[#F7F7F8]">
+<div class="bg-[#F7F7F8] w-full">
     <!-- navbar -->
     <div class="navbar bg-white py-[11px] flex items-center justify-around">
         <div class="left-content text-[#2D71B4] font-[600] flex justify-content-center items-center space-x-[34px]">
@@ -105,7 +105,7 @@
             <span class="text-[#2D71B4] text-[40px] font-[600]">Layanan Kita</span>
             <span class="text-[#5F5F5F] text-[17px] font-[400]">KUY reservasi dan kirim paketmu sekarang juga!</span>
 
-            <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] mt-[29px]">Reservasi Sekarang</button>
+            <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] mt-[15px]">Reservasi Sekarang</button>
             <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
         </div>
 
@@ -291,7 +291,7 @@
         <div class="flex flex-col">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Informasi Kontak</p>
             <div class="flex">
-                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[23.894px] mr-[10px]">
+                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[1.493rem] mr-[10px]">
                 <span class="text-[#5F5F5F]">0818-0400-4058</span>
             </div>
         </div>
