--- a/Cek-paket.html
+++ b/Cek-paket.html
@@ -99,12 +99,13 @@
                         </div>
 
                         <div class="stepper relative mx-[30px]">
-                            <div class="bg-[#2D71B4] w-[20px] h-[30px] rounded-full p-4"></div>
+                            <div class="bg-[#D9D9D9] w-[20px] h-[30px] rounded-full p-4"></div>
                             <div class="line absolute bg-"></div>
                         </div>
 
                         <div class="flex flex-col">
-                            <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
+                            <p class="text-[#2D71B4] text-[16px] font-[600]">Proses Pengantaran oleh Kurir</p>
+                            <p class="text-[#5F5F5F] text-[14px] font-[600]">Oleh : Friendly</p>
                         </div>
                     </div>
                     <div class="flex mb-[30px]">
@@ -114,12 +115,12 @@
                         </div>
 
                         <div class="stepper relative mx-[30px]">
-                            <div class="bg-[#2D71B4] w-[20px] h-[30px] rounded-full p-4"></div>
+                            <div class="bg-[#D9D9D9] w-[20px] h-[30px] rounded-full p-4"></div>
                             <div class="line absolute bg-"></div>
                         </div>
 
                         <div class="flex flex-col">
-                            <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Di Terima (Siscko)</p>
+                            <p class="text-[#2D71B4] text-[16px] font-[600]">Paket Transi Outlet Jakarta</p>
                         </div>
                     </div>
 
@@ -163,40 +164,40 @@
         </div>
 
         
-         <!-- footer -->
-    <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] gap-[60px] pb-[50px]">
-        <div class="flex flex-wrap flex-col">
+    <!-- footer -->
+    <div class="bg-[#E2F7FC] flex flex-wrap justify-evenly pt-[65px] pb-[50px]">
+        <div class="flex flex-wrap flex-col mr-[60px]">
             <img src="./assets/logo-footer.png" alt="logo-kuy" class="max-w-[285px]">
             <p class="text-black text-[18px] font-[600] mt-[20px]">Download aplikasinya di</p>
             <img src="./assets/googleplaystore.png" alt="icon-google-lay-kuy" class="w-[229px] mt-2">
         </div>
         
-        <div class="flex flex-col flex-wrap gap-[10px]">
-            <p class="text-black text-[18px] font-[600] pb-[10px]">Lainnya</p>
-            <a href="" class="text-[#5F5F5F]">Syarat dan Ketentuan</a>
-            <a href="" class="text-[#5F5F5F]">Pusat Bantuan</a>
-            <a href="" class="text-[#5F5F5F]">FAQ</a>
+        <div class="flex flex-col flex-wrap">
+            <p class="text-black text-[18px] font-[600] pb-[10px] mb-[10px]">Lainnya</p>
+            <a href="" class="text-[#5F5F5F] mb-[10px]">Syarat dan Ketentuan</a>
+            <a href="" class="text-[#5F5F5F] mb-[10px]">Pusat Bantuan</a>
+            <a href="" class="text-[#5F5F5F] ">FAQ</a>
         </div>
 
         <div class="flex flex-col">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Informasi Kontak</p>
             <div class="flex">
-                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[23.894px] mr-[10px]">
+                <img src="./assets/i-whatsapp.png" alt="icon-whatsapp-kuy" class="w-[1.493rem] mr-[10px]">
                 <span class="text-[#5F5F5F]">0818-0400-4058</span>
             </div>
         </div>
 
         <div class="flex flex-col">
             <p class="text-black text-[18px] font-[600] pb-[20px]">Sosial Media</p>
-            <div class="flex gap-[4px]">
+            <div class="flex">
                 <a href="">
-                    <img src="./assets/i-instagram.png" alt="icon-instagram-kuy" class="w-[27px]">
+                    <img src="./assets/i-instagram.png" alt="icon-instagram-kuy" class="w-[27px] mr-[4px]">
                 </a>
                 <a href="">
-                    <img src="./assets/i-facebook.png" alt="icon-facebook-kuy" class="w-[27px]">
+                    <img src="./assets/i-facebook.png" alt="icon-facebook-kuy" class="w-[27px] mr-[4px]">
                 </a>
                 <a href="">
-                    <img src="./assets/i-twitter.png" alt="icon-twitter-kuy" class="w-[27px]">
+                    <img src="./assets/i-twitter.png" alt="icon-twitter-kuy" class="w-[27px] mr-[4px]">
                 </a>
                 <a href="">
                     <img src="./assets/i-youtube.png" alt="icon-youtube-kuy" class="w-[27px]">
