--- a/Landing-page.html
+++ b/Landing-page.html
@@ -50,7 +50,7 @@
             </div>
             
             <!-- cek ongkir -->
-            <div class="bg-white rounded-md max-w-[750px]">
+            <div class="bg-white rounded-md max-w-[860px] h-[341px]">
                 <div class="bg-white rounded-md">
                     <div class="flex flex-col p-[20px] justify-around">
                         <span class="text-[#2D71B4] font-[600] text-[24px] mb-[44px]">Cek Ongkir</span>
