--- a/Cakupan-wilayah.html
+++ b/Cakupan-wilayah.html
@@ -61,7 +61,7 @@
         </div>
     </div>
 
-    <div class="flex flex-col w-[1100px] justify-center pb-[200px] lg:ml-[70px]">
+    <div class="flex flex-col w-[1100px] pb-[200px] lg:ml-[70px]">
         <div class="">
             <p class="text-[#2D71B4] text-[40px] font-[600]">Jangkauan Tiketux KUY</p>
             <p class="text-[#5F5F5F] text-[16px] font-[400]">Saat ini pengiriman Tiketux Kuy sudah menjangkau total 51 kecamatan se Bandung Raya meliputi kecamatan di Kabupaten Bandung - Kabupaten Bandung Barat - Kota Bandung - Kota Cimahi. Cek daftar jangkauan pengiriman Tiketux Kuy di bawah ini sebelum kirim paket:</p>
@@ -69,7 +69,7 @@
 
         <div class="flex flex-row mt-[30px] mb-[50px]">
             <div class="flex flex-col w-[347px] mr-[65px]">
-                <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px] mt-[29px]">Reservasi Sekarang</button>
+                <button class="bg-[#2D71B4] text-white rounded-md py-[12px] mb-[14px]">Reservasi Sekarang</button>
                 <button class="bg-[#079849] text-white rounded-md py-[12px]">Whatsapp</button> 
             </div>
 
@@ -112,7 +112,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td class="border border-[#C2C2C2]">Lembang*</td>
+                            <td class="border border-[#C2C2C2] p-2">Lembang*</td>
                         </tr>
                         
                     </tbody>
